Added first design elements

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,15 @@
             "label": "Less Compile",
             "type": "shell",
             "command": "lessc -clean-css styles/main-styles.less styles/main-styles.min.css",
-            "group": "build"
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "Type Script Compile & Minify",
+            "type": "shell",
+            "command": "tsc scripts/main.ts && uglifyjs --compress --mangle --output scripts/main.min.js -- scripts/main.js && rm scripts/main.js",
+            "group": "build",
+            "problemMatcher": []
         }
     ]
 }
